# 42_Push_Swap

./: .gitignore  CMakeLists.txt  Makefile
inc/: checker.h  lst_int.h  parsing.h  push_swap.h
includes/: lst_int.h  parsing.h  push_swap.h  struct.h
libft/: Makefile
libft/includes/: libft.h
libft/srcs/: math.c
libft/srcs/char/: ft_issign.c  ft_isspace.c
libft/srcs/convert/: ft_atoi.c
libft/srcs/fd/: ft_putstr_fd.c
libft/srcs/list/: ft_lstclear.c  ft_lstdelone.c
libft/srcs/string/: ft_strcmp.c
src/: main.c
src/checker/: checker.c  get_instruction.c  movement.c  reverse_rotate.c  rotate.c
src/list/: lst_before_last.c  lst_get_index.c  lst_int_push.c  lst_int_rotate.c  lst_int_swap.c  lst_issort_int.c  lstadd_back_int.c  lstnew_int.c  lstsize_int.c
src/parsing/: check_number.c  parsing.c
src/sort/: calc_operation.c  calculate_best_value.c  calculate_nb_move.c  sort_into_chunk.c  sort_with_rotate.c
srcs/: main.c
srcs/list/: lst_display_int.c  lst_index_int.c  lst_int_push.c  lst_int_rotate.c  lst_int_swap.c  lst_issort_int.c  lst_min_max.c  lst_search_int.c  lstadd_back_int.c  lstadd_front_int.c  lstclear_int.c  lstlast_int.c
srcs/parsing/: calc_index.c  check_number.c  error.c  parsing.c
srcs/sort/: best_sort_first.c  bubble_sort.c  calc_operation.c  exception.c  fast_place.c  first_step.c  sort_3elem.c
